<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.klaro.reformcloud2</groupId>
    <artifactId>reformcloud2</artifactId>
    <packaging>pom</packaging>
    <version>2.0-SNAPSHOT</version>

    <!-- do not change the module order to prevent issues while building the project -->
    <modules>
        <module>reformcloud2-default-applications</module>
        <module>reformcloud2-executor-api</module>
        <module>reformcloud2-executor</module>
        <module>reformcloud2-runner</module>
    </modules>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.targetEncoding>UTF-8</project.build.targetEncoding>

        <service.version>2.0</service.version>
        <service.spec>BETA</service.spec>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>

        <plugins>
            <!-- maven compiler plugin to set the target and source version (1.8) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>